--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "numbro": "^2.3.6",
     "react": "17.0.2",
     "react-native": "0.67.4",
     "styled-components": "^5.3.5"
